--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "publishConfig": {
+    "access": "public"
+  },
   "packageManager": "pnpm@10.20.0"
 }
